Removed Worksheet Updated logging to debug