@@ -1,3 +1,4 @@
+
 version := "0.0.3"
 
 //fork := true
@@ -18,65 +19,7 @@ resolvers += "Sonatype Releases" at "http://oss.sonatype.org/content/repositorie
 name := "RssParser"
 
 
-javaOptions in run += "-Xmx2G -Xms2G"
-
-def unpack(target: File, f: File, log: Logger) = {
-  log.debug("unpacking " + f.getName)
-  if (!f.isDirectory) sbt.IO.unzip(f, target, unpackFilter(target))
-}
-
-def create(depDir: File, binDir: File, buildJar: File) = {
-  def files(dir: File) = {
-    val fs = (dir ** "*").get.filter(d => d != dir)
-    fs.map(x => (x, x.relativeTo(dir).get.getPath))
-  }
-  sbt.IO.zip(files(binDir) ++ files(depDir), buildJar)
-}
-
-val dependentJarDirectory = settingKey[File]("location of the unpacked dependent jars")
-
-dependentJarDirectory := target.value / "dependent-jars"
-
-val createDependentJarDirectory = taskKey[File]("create the dependent-jars directory")
-
-createDependentJarDirectory := {
-  sbt.IO.createDirectory(dependentJarDirectory.value)
-  dependentJarDirectory.value
-}
-
-val excludes = List("meta-inf", "license", "play.plugins", "reference.conf")
-
-def unpackFilter(target: File) = new NameFilter {
-  def accept(name: String) = {
-    !excludes.exists(x => name.toLowerCase().startsWith(x)) &&
-      !file(target.getAbsolutePath + "/" + name).exists
-  }
-}
-
-val unpackJars = taskKey[Seq[_]]("unpacks a dependent jars into target/dependent-jars")
-
-unpackJars := {
-  val dir = createDependentJarDirectory.value
-  val log = streams.value.log
-  Build.data((dependencyClasspath in Runtime).value).map ( f => unpack(dir, f, log))
-}
-
-val createUberJar = taskKey[File]("create jar which we will run")
-
-createUberJar := {
-  val ignored = unpackJars.value
-  create (dependentJarDirectory.value, (classDirectory in Compile).value, target.value / "build.jar");
-  target.value / "build.jar"
-}
-
-val runRss = taskKey[Process]("Run RSSParser")
-
-runRss := {
-   val jar = createUberJar.value
-   val options = ForkOptions()
-   val args = Seq("-cp", jar.getAbsolutePath,"Rss.Main")
-   Fork.java.fork(options,args)
-}
+javaOptions in run += "-Xmx2g -Xms2g -XX:PermSize=512M"
 
 libraryDependencies ++= Seq(
    "net.debasishg" %% "redisreact" % "0.3",
@@ -101,9 +44,4 @@ libraryDependencies ++= Seq(
     "org.jsoup" % "jsoup" % "1.7.3"
 )
 
-//runUberJar := {
-//  val uberJar = createUberJar.value
-//  val options = ForkOptions()
-//  val arguments = Seq("-cp", uberJar.getAbsolutePath, "global.Global")
-//  Fork.java(options, arguments)
-//} 
+
